--- a/town page/index.html
+++ b/town page/index.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>嶄巍創作アトリエ｜HOME</title>
 </head>
 <body>
+    <header>
+        <div class="headerlogo">
+            <img src="../img/logo-1.png" alt="創作Logo">
+            <div clas="創作タイトル">UN SUBJEFE</div>
+        </div>
+        <nav>
+            <ul>
+                <li>ストーリー</li>
+                <li><a href="../キャラクターページ/character.html">キャラクター</a></li>
+                <li>ギャラリー</li>
+                <li>作者について</li>
+            </ul>
+        </nav>
+    </header>
+    <main></main>
+    <footer></footer>
     
 </body>
 </html>
