--- a/キャラクターページ/character.html
+++ b/キャラクターページ/character.html
@@ -61,6 +61,10 @@
         </section>
         </div>
     </main>
-    <footer></footer>
+    <footer>
+        <p>&copy;2021 | 粟飯原　嶄巍</p>
+        <div class="social"><a href="https://twitter.com/Zanshino_uno" target="_blank">
+        <img src="../img/twitter.png" alt="twitter"></a></div>
+    </footer>
 </body>
 </html>
