--- a/キャラクターページ/character.html
+++ b/キャラクターページ/character.html
@@ -12,6 +12,7 @@
             <img class="titlelogo" src="../img/logo-1.png" alt="創作Logo">
             <h1 clas="logoname">UN SUBJEFE</h1>
         </div>
+        <!--
         <nav>
             <button onclick="toggleMenu()">&#9776; Menu</button>
             <ul>
@@ -20,7 +21,7 @@
                 <li><a href="#">ギャラリー</a></li>
                 <li><a href=".#">作者について</a></li>
             </ul>
-        </nav>
+        </nav>-->
     </header>
     <main>
         <h2 class="charainfo">&#10037;キャラクター紹介</h2>
