--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <ul>
                 <li>ストーリー</li>
-                <li><a href="../キャラクターページ/character.html">キャラクター</a></li>
+                <li><a href="../charactorpage/character.html">キャラクター</a></li>
                 <li>ギャラリー</li>
                 <li>作者について</li>
             </ul>
