--- a/Vorlizeo/person.html
+++ b/Vorlizeo/person.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="../charactorpage/charah.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -23,7 +24,9 @@
         </nav>-->
     </header>
 
-    <main></main>
+    <main>
+        
+    </main>
 
     <footer>
         <p>&copy;2021 | 粟飯原　嶄巍</p>
