--- a/Vorlizeo/person.html
+++ b/Vorlizeo/person.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../charactorpage/charah.css" rel="stylesheet">
+    <link href="../Vorlizeo/person.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -23,8 +23,42 @@
             </ul>
         </nav>-->
     </header>
-
     <main>
+        <section class="nameicon">
+            <img src="../img/vor_R.jpg" alt="Vorlizeo">
+            <h2>Vorlizeo Pedro Losto</h2>
+            <p class="subname">ｳﾞｫﾙﾘｯﾂｪｵ ﾍﾟﾄﾞﾛ ﾛｽﾄ</p>
+        </section>
+        <div class="basicinfo">
+            <h4>基本情報</h4>
+            <p>
+                <strong>年齢：</strong>21-25歳　<br>
+                <strong>誕生日：</strong>6/12　<br>
+                <strong>星座：</strong>ふたご座　<br>
+                <strong>身長：</strong>165cm　<br>
+                <strong>趣味：</strong>映画・アニメ鑑賞/スポーツ(ビリヤード・サッカー)/人と話すこと　<br>
+                <strong>特技：</strong>ビリヤード/ヴァイオリン/早撃ち/料理　<br>
+                誕生花：ライラック
+            </p>
+        </div>
+        <div class="personality">
+            <h4>性格</h4>
+            <p>明るく社交的な性格なので、誰とでも話せ、すぐに打ち解けられる。じっとしていることが苦手で、
+                自分の興味のあることにはすぐに行動を起こす。頭の回転は早いほうではないが、直感が鋭いので、
+                違和感をかんじたり、引っかかることがあればすぐに次の行動に移る。時にはそれが危険を脅かすこともしばしば。。。
+                人間関係は良くもなく悪くもない。女性によく自分から話しかけることがあり(ナンパ？)、女生とのトラブルは多め。
+                気になる男性にも積極的に話しかける。自分よりも賢く、知的な人に惹かれやすい。
+            </p>
+        </div>
+        <div class="background">
+            <h4>生い立ち</h4>
+            <p>ﾛｽﾄﾌｧﾐﾘｰ私有：コゼンクトロ地方の北方で生まれ育つ。3歳のころにマフィア戦争により両親からはなれ、
+                孤児院で育つことになる。それから2年後、5歳の時にﾛｽﾄﾌｧﾐﾘｰの長男ｱｽｶ・ﾛｽﾄに引き取られ、ﾛｽﾄﾌｧﾐﾘｰの中で
+                育てられる。ほかのﾛｽﾄﾌｧﾐﾘｰ兄弟とは違い、一般の学校で教育をうけた。しかし、家ではｱｽｶからﾏﾌｨｱについての
+                簡単な知識と立ち居振る舞いを教わる。一般人としての自分とマフィアの中で育つ自分との葛藤を長くいだいており、
+                ｱｽｶが亡くなる数年前にﾛｽﾄﾌｧﾐﾘｰから出ている。
+            </p>
+        </div>
         
     </main>
 
