--- a/charactorpage/character.html
+++ b/charactorpage/character.html
@@ -26,13 +26,13 @@
     <main>
         <h2 class="charainfo">&#10037;キャラクター紹介</h2>
 
-        <h3>Lost Family</h3>
+        <h3>Losto Family</h3>
 
         <div class="characterlink">
         <section class="lostfamilia">
             <div class="caradiv">
                 <img class="charaimg" src="../img/vor_R.jpg" alt="vor">
-                <h4 class="name"><a href="#">Vorlizeo Pedro Losto</a></h4>
+                <h4 class="name"><a href="../Vorlizeo/person.css">Vorlizeo Pedro Losto</a></h4>
             </div>
             <div class="caradiv">
                 <img class="charaimg" src="../img/aska_R.jpg" alt="aska">
