--- a/charactorpage/character.html
+++ b/charactorpage/character.html
@@ -32,7 +32,7 @@
         <section class="lostfamilia">
             <div class="caradiv">
                 <img class="charaimg" src="../img/vor_R.jpg" alt="vor">
-                <h4 class="name"><a href="../Vorlizeo/person.css">Vorlizeo Pedro Losto</a></h4>
+                <h4 class="name"><a href="../Vorlizeo/person.html">Vorlizeo Pedro Losto</a></h4>
             </div>
             <div class="caradiv">
                 <img class="charaimg" src="../img/aska_R.jpg" alt="aska">
