--- a/Vorlizeo/person.html
+++ b/Vorlizeo/person.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../Vorlizeo/person.css" rel="stylesheet">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+
+    <!------------------------------font link---------------------------------------------------->
+<link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Tinos:wght@700&display=swap" rel="stylesheet">
+   <!------------------------------------------------------------------------------------------->
+    <title>キャラクターシート｜ヴォルリッツェオ</title>
 </head>
 <body>
     <header>
@@ -27,10 +35,10 @@
         <section class="nameicon">
             <img src="../img/vor_R.jpg" alt="Vorlizeo">
             <h2>Vorlizeo Pedro Losto</h2>
-            <p class="subname">ｳﾞｫﾙﾘｯﾂｪｵ ﾍﾟﾄﾞﾛ ﾛｽﾄ</p>
+            <p class="subname">ｳﾞｫﾙﾘｯﾂｪｵ・ﾍﾟﾄﾞﾛ・ﾛｽﾄ</p>
         </section>
         <div class="basicinfo">
-            <h4>基本情報</h4>
+            <h4>【基本情報】</h4>
             <p>
                 <strong>年齢：</strong>21-25歳　<br>
                 <strong>誕生日：</strong>6/12　<br>
@@ -38,32 +46,45 @@
                 <strong>身長：</strong>165cm　<br>
                 <strong>趣味：</strong>映画・アニメ鑑賞/スポーツ(ビリヤード・サッカー)/人と話すこと　<br>
                 <strong>特技：</strong>ビリヤード/ヴァイオリン/早撃ち/料理　<br>
+                <strong>言語：</strong>スペイン語/イタリア語/少しだけ日本語とドイツ語　<br>
                 誕生花：ライラック
+                (花言葉：初めての愛の感情)
+                誕生石：シトリン
+                (石言葉：愛する喜び)
             </p>
         </div>
         <div class="personality">
-            <h4>性格</h4>
+            <h4>【性格】</h4>
             <p>明るく社交的な性格なので、誰とでも話せ、すぐに打ち解けられる。じっとしていることが苦手で、
                 自分の興味のあることにはすぐに行動を起こす。頭の回転は早いほうではないが、直感が鋭いので、
                 違和感をかんじたり、引っかかることがあればすぐに次の行動に移る。時にはそれが危険を脅かすこともしばしば。。。
-                人間関係は良くもなく悪くもない。女性によく自分から話しかけることがあり(ナンパ？)、女生とのトラブルは多め。
+                人間関係は良くもなく悪くもない。女性によく自分から話しかけることがあり(ナンパ？)、女性とのトラブルは多め。
                 気になる男性にも積極的に話しかける。自分よりも賢く、知的な人に惹かれやすい。
             </p>
         </div>
         <div class="background">
-            <h4>生い立ち</h4>
-            <p>ﾛｽﾄﾌｧﾐﾘｰ私有：コゼンクトロ地方の北方で生まれ育つ。3歳のころにマフィア戦争により両親からはなれ、
+            <h4>【生い立ち】</h4>
+            <p>ﾛｽﾄﾌｧﾐﾘｰ私有のコゼンクトロ地方の北方で生まれ育つ。3歳のころにマフィア戦争により両親からはなれ、
                 孤児院で育つことになる。それから2年後、5歳の時にﾛｽﾄﾌｧﾐﾘｰの長男ｱｽｶ・ﾛｽﾄに引き取られ、ﾛｽﾄﾌｧﾐﾘｰの中で
-                育てられる。ほかのﾛｽﾄﾌｧﾐﾘｰ兄弟とは違い、一般の学校で教育をうけた。しかし、家ではｱｽｶからﾏﾌｨｱについての
+                4男として育てられるが、ほかのﾛｽﾄﾌｧﾐﾘｰ兄弟とは違い、一般の学校で教育をうけた。しかし、家ではｱｽｶからﾏﾌｨｱについての
                 簡単な知識と立ち居振る舞いを教わる。一般人としての自分とマフィアの中で育つ自分との葛藤を長くいだいており、
                 ｱｽｶが亡くなる数年前にﾛｽﾄﾌｧﾐﾘｰから出ている。
+            </p>
+        </div>
+        <div class="looks">
+            <h4>【見た目の特徴】</h4>
+            <p>髪色：赤毛<br>
+                目の色：青みがかったグレー<br>
+                体格：普通…脱いだ時は軽く筋肉が見えるくらい<br>
+                服装：私服は革ジャンを好んで着ている。ジーパンとスニーカーが動きやすくて好き。ﾌｧﾐﾘｰに連れられる時は
+                スーツを着させられる。<br>
             </p>
         </div>
         
     </main>
 
     <footer>
-        <p>&copy;2021 | 粟飯原　嶄巍</p>
+        <div>&copy;2021 | 粟飯原　嶄巍</div>
         <div class="social"><a href="https://twitter.com/Zanshino_uno" target="_blank">
         <img src="../img/twitter.png" alt="twitter"></a></div>
     </footer>
