--- a/Vorlizeo/person.html
+++ b/Vorlizeo/person.html
@@ -33,7 +33,7 @@
     </header>
     <main>
         <section class="nameicon">
-            <img src="../img/vor_R.jpg" alt="Vorlizeo">
+            <img src="../img/vor_s.png" alt="Vorlizeo">
             <h2>Vorlizeo Pedro Losto</h2>
             <p class="subname">ｳﾞｫﾙﾘｯﾂｪｵ・ﾍﾟﾄﾞﾛ・ﾛｽﾄ</p>
         </section>
