--- a/charactorpage/character.html
+++ b/charactorpage/character.html
@@ -31,23 +31,23 @@
         <div class="characterlink">
         <section class="lostfamilia">
             <div class="caradiv">
-                <img class="charaimg" src="../img/vor_R.jpg" alt="vor">
+                <img class="charaimg" src="../img/vor_s.png" alt="vor">
                 <h4 class="name"><a href="../Vorlizeo/person.html">Vorlizeo Pedro Losto</a></h4>
             </div>
             <div class="caradiv">
-                <img class="charaimg" src="../img/aska_R.jpg" alt="aska">
+                <img class="charaimg" src="../img/aska_s.png" alt="aska">
                 <h4 class="name"><a href="#">Aska Mira Losto</a></h4>
             </div>
             <div class="caradiv">
-                <img class="charaimg" src="../img/liza_R.jpg" alt="Riza">
+                <img class="charaimg" src="../img/liza_s.png" alt="Riza">
                 <h4 class="name"><a href="#">Riza Berotrini Losto</a></h4>
             </div>
             <div class="caradiv">
-                <img class="charaimg" src="../img/hank_R.jpg" alt="hank">
+                <img class="charaimg" src="../img/hank_s.png" alt="hank">
                 <h4 class="name"><a href="#">Hank Z Losto</a></h4>
             </div>
             <div class="caradiv">
-                <img class="charaimg" src="../img/niko,nika_R.jpg" alt="niconica">
+                <img class="charaimg" src="../img/niko,nika_s.png" alt="niconica">
                 <h4 class="name"><a href="#">Nica Cralis Losto/Nico Sandre Losto</a></h4>
             </div>
 
@@ -56,7 +56,7 @@
         <h3>Heinz Family</h3>
         <section class="heinzfamilia">
             <div class="caradiv">
-                <img class="charaimg" src="../img/ligaro_R.jpg" alt="ligaro">
+                <img class="charaimg" src="../img/ligaro_s.png" alt="ligaro">
                 <h4 class="name"><a href="#">Ligaro Felix Heinz</a></h4>
             </div>
         </section>
