--- a/charactorpage/character.html
+++ b/charactorpage/character.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <!------------------------------font link---------------------------------------------------->
+<link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Tinos:wght@700&display=swap" rel="stylesheet">
+   <!------------------------------------------------------------------------------------------->
     <link href="charah.css" rel="stylesheet">
     <title>嶄巍創作アトリエ｜キャラクター</title>
 </head>
