--- a/Vorlizeo/person.html
+++ b/Vorlizeo/person.html
@@ -46,10 +46,10 @@
                 <strong>趣味：</strong>映画・アニメ鑑賞/スポーツ(ビリヤード・サッカー)/人と話すこと　<br>
                 <strong>特技：</strong>ビリヤード/ヴァイオリン/早撃ち/料理　<br>
                 <strong>言語：</strong>スペイン語/イタリア語/少しだけ日本語とドイツ語　<br>
-                誕生花：ライラック
-                (花言葉：初めての愛の感情)
-                誕生石：シトリン
-                (石言葉：愛する喜び)
+                誕生花：ライラック<br>
+                (花言葉：初めての愛の感情)<br>
+                誕生石：シトリン<br>
+                (石言葉：愛する喜び)<br>
             </p>
         </div>
         <div class="personality">
