--- a/charactorpage/character.html
+++ b/charactorpage/character.html
@@ -42,15 +42,15 @@
             </div>
             <div class="caradiv">
                 <img class="charaimg" src="../img/aska_s.png" alt="aska">
-                <h4 class="name"><a href="#">Aska Mira Losto</a></h4>
+                <h4 class="name"><a href="../Aska/aska.html">Aska Mira Losto</a></h4>
             </div>
             <div class="caradiv">
                 <img class="charaimg" src="../img/liza_s.png" alt="Riza">
-                <h4 class="name"><a href="#">Riza Berotrini Losto</a></h4>
+                <h4 class="name"><a href="../Riza/riza.html">Riza Berotrini Losto</a></h4>
             </div>
             <div class="caradiv">
                 <img class="charaimg" src="../img/hank_s.png" alt="hank">
-                <h4 class="name"><a href="#">Hank Z Losto</a></h4>
+                <h4 class="name"><a href="../Hank/hank.html">Hank Z Losto</a></h4>
             </div>
             <div class="caradiv">
                 <img class="charaimg" src="../img/niko,nika_s.png" alt="niconica">
