--- a/Hank/hank.html
+++ b/Hank/hank.html
@@ -43,7 +43,7 @@
                 <strong>誕生日：</strong>4/17　<br>
                 <strong>星座：</strong>おひつじ座　<br>
                 <strong>身長：</strong>184cm　<br>
-                <strong>趣味：</strong>筋トレ/統計/スポーツカー/ボードｹﾞｰﾑ <br>
+                <strong>趣味：</strong>筋トレ/統計/スポーツカー/ボードゲーム <br>
                 <strong>特技：</strong>料理/お酒が強い/　<br>
                 <strong>言語：</strong>イタリア語/英語　<br>
                 誕生花：アネモネ白<br>
@@ -62,7 +62,7 @@
         </div>
         <div class="background">
             <h4>【生い立ち】</h4>
-            <p>ﾛｽﾄﾌｧﾐﾘｰの三男として生まれ、ｳﾞｫﾙﾘｯﾂｪｵが来るまでは末っ子として育っている。そのためなのか、性格も反対な部分があり、ｳﾞｫﾙﾘｯﾂｪｵとは口喧嘩が絶えない。
+            <p>ﾛｽﾄﾌｧﾐﾘｰの三男として生まれ、ｳﾞｫﾙﾘｯﾂｪｵが来るまでは末っ子として育っている(リッツァとは血のつながった兄弟)。そのためなのか、性格も反対な部分があり、ｳﾞｫﾙﾘｯﾂｪｵとは口喧嘩が絶えない。
                 学生時代はﾘｯﾂｧと同じ学校に通い経済と金融関係について学び、上位の成績で卒業。卒業後はﾌｧﾐﾘｰ全体の金融を管理し、大手ホテルの金融管理もしている。ﾌｧﾐﾘｰのお金事情を
                 握っているのはこのひと。アスカの生前はアスカのもとで秘書として働き、部下のソルジャーとともにコゼンクトロ地方の経済統計だったり、金融の状況をまとめいている。
                 また、アスカの死後は自分の仕事もこなしながら、臨時のアンダーボスとして、ドンに仕える。ｳﾞｫﾙﾘｯﾂｪｵとは犬猿の仲でもあるが、アスカの元で働いていた時にｳﾞｫﾙﾘｯﾂｪｵの
