--- a/charactorpage/character.html
+++ b/charactorpage/character.html
@@ -54,7 +54,7 @@
             </div>
             <div class="caradiv">
                 <img class="charaimg" src="../img/niko,nika_s.png" alt="niconica">
-                <h4 class="name"><a href="#">Nica Cralis Losto/Nico Sandre Losto</a></h4>
+                <h4 class="name"><a href="../nica,nico/nicanico.html">Nica Cralis Losto/Nico Sandre Losto</a></h4>
             </div>
 
         </section>
