--- a/nica,nico/nicanico.html
+++ b/nica,nico/nicanico.html
@@ -46,10 +46,10 @@
                 <strong>趣味：</strong>乗馬/ペタンク/工作 <br>
                 <strong>特技：</strong>耳コピ/ピアノ/トランペット(ﾆｶ)　星座読み/歌(ﾆｺ)　<br>
                 <strong>言語：</strong>イタリア語/英語/フランス語/ドイツ語？　<br>
-                誕生花：アネモネ白<br>
-                (花言葉：真実・忘れられた)<br>
-                誕生石：ルチルクォーツ<br>
-                (石言葉：正しい評価)<br>
+                誕生花：タンジー<br>
+                (花言葉：戦いを宣言する)<br>
+                誕生石：ルビー<br>
+                (石言葉：勝利)<br>
             </p>
         </div>
         <div class="personality">
