--- a/charactorpage/character.html
+++ b/charactorpage/character.html
@@ -63,7 +63,7 @@
         <section class="heinzfamilia">
             <div class="caradiv">
                 <img class="charaimg" src="../img/ligaro_s.png" alt="ligaro">
-                <h4 class="name"><a href="#">Ligaro Felix Heinz</a></h4>
+                <h4 class="name"><a href="../Ligaro/ligaro.html">Ligaro Felix Heinz</a></h4>
             </div>
         </section>
         </div>
