--- a/Ligaro/ligaro.html
+++ b/Ligaro/ligaro.html
@@ -40,7 +40,7 @@
             <h4>【基本情報】</h4>
             <p>
                 <strong>年齢：</strong>23-27歳　<br>
-                <strong>誕生日：9/6</strong>　<br>
+                <strong>誕生日：</strong>9/6　<br>
                 <strong>星座：</strong>おとめ座　<br>
                 <strong>身長：</strong>188cm　<br>
                 <strong>趣味：</strong>読書/天体観測/音楽鑑賞/美術鑑賞 <br>
